[css-grid] Refactoring and new namespace with grid related utility functions https://bugs.webkit.org/show_bug.cgi?id=179633

Reviewed by Darin Adler.

Added a new namespace with several utility functions to share logic
between RenderGrid and GridTrackSizingAlgorithm.

No new tests, since no new functionality is added.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* rendering/GridLayoutUtils.cpp: Added.
(WebCore::GridLayoutUtils::computeMarginLogicalSizeForChild):
(WebCore::GridLayoutUtils::marginLogicalSizeForChild):
(WebCore::GridLayoutUtils::isOrthogonalChild):
(WebCore::GridLayoutUtils::flowAwareDirectionForChild):
* rendering/GridLayoutUtils.h: Added.
* rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithm::assumedRowsSizeForOrthogonalChild const):
(WebCore::GridTrackSizingAlgorithmStrategy::logicalHeightForChild const):
(WebCore::GridTrackSizingAlgorithmStrategy::minContentForChild const):
(WebCore::GridTrackSizingAlgorithmStrategy::maxContentForChild const):
(WebCore::GridTrackSizingAlgorithmStrategy::minSizeForChild const):
(WebCore::DefiniteSizeStrategy::minLogicalWidthForChild const):
* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutBlock):
(WebCore::RenderGrid::placeItemsOnGrid const):
(WebCore::RenderGrid::layoutPositionedObject):
(WebCore::RenderGrid::availableAlignmentSpaceForChildBeforeStretching const):
(WebCore::RenderGrid::applyStretchAlignmentToChildIfNeeded):
(WebCore::RenderGrid::isInlineBaselineAlignedChild const):
(WebCore::RenderGrid::firstLineBaseline const):
(WebCore::RenderGrid::columnAxisPositionForChild const):
(WebCore::RenderGrid::rowAxisPositionForChild const):
(WebCore::RenderGrid::columnAxisOffsetForChild const):
(WebCore::RenderGrid::rowAxisOffsetForChild const):
(WebCore::RenderGrid::findChildLogicalPosition const):


Canonical link: https://commits.webkit.org/195972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225104 268f45cc-cd09-0410-ab3c-d52691b4dbfc